# k-core-decomposition

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  unit-test.cpp
src/common/: CMakeLists.txt  graph.cpp  graph.hpp  settings.hpp
src/kcore/: CMakeLists.txt  kcore.cpp  kcore.hpp
